# trap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: code-map.md  quickstart.md
docs/guides/: cost-tracking.md  running.md  writing-solution.md  writing-task.md
docs/reference/: cli.md  io-contract.md  trap-yaml.md  traptask-yaml.md  workspace.md
examples/echo/solution/: echo.py
examples/echo/task/: README.md  traptask.yaml
examples/echo/task/expected/contains_basic/: expected.json
examples/echo/task/expected/exact_match/: expected.json
examples/echo/task/expected/skipped_example/: expected.json
examples/echo/task/inputs/exact_match/: input.json
examples/echo/task/inputs/exit_code_failure/: input.json
examples/echo/task/inputs/skipped_example/: input.json
examples/llm-qa/task/expected/capital_of_france/: expected.json
examples/llm-qa/task/expected/largest_planet/: expected.json
examples/llm-qa/task/expected/simple_math/: expected.json
examples/llm-qa/task/inputs/largest_planet/: question.txt
examples/reference/task/: traptask.yaml
examples/word-count/solution/: trap.yaml
examples/word-count/task/expected/basic/: frequencies.json  summary.json
examples/word-count/task/expected/case_insensitive/: frequencies.json  summary.json
examples/word-count/task/expected/case_sensitive/: frequencies.json  summary.json
examples/word-count/task/expected/empty/: summary.json
examples/word-count/task/inputs/basic/: config.json  text.txt
examples/word-count/task/inputs/case_insensitive/: text.txt
examples/word-count/task/inputs/case_sensitive/: config.json  text.txt
examples/word-count/task/inputs/empty/: config.json
src/trap/: __init__.py
src/trap/auth/: __init__.py  client.py  login.py  oauth.py  resolve.py  store.py
src/trap/cli/: __init__.py  _auth.py  _console.py
src/trap/cost/: __init__.py  calculator.py  pricing.py  providers.py  proxy.py
src/trap/display/: __init__.py  progress.py  report.py  submit.py
src/trap/git_ops/: __init__.py  local.py  rev.py  url.py
src/trap/loader/: __init__.py  errors.py  trap_yaml.py  traptask_yaml.py
src/trap/models/: __init__.py  cost.py  diagnosis.py  provenance.py  report.py  results.py  trap_yaml.py  traptask_yaml.py
src/trap/report/: __init__.py  base.py  json.py  rich.py
src/trap/runner/: __init__.py  capture.py  grader.py  judge.py  proc.py  solution.py  task.py
src/trap/workspace/: __init__.py  identity.py  store.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_auth.py  test_cost.py  test_display.py  test_environment.py  test_gaps.py  test_git_ops.py  test_loader.py  test_models.py  test_pricing.py  test_report.py  test_runner.py  test_workspace.py
