[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trap-cli"
dynamic = ["version"]
description = "tp — non-invasive CLI testing framework for AI workflows. Submits results to trapstreet.run."
readme = "README.md"
license = "MIT"
authors = [{ name = "trapstreet.run", email = "founder@trapstreet.run" }]
keywords = ["eval", "ai", "llm", "benchmark", "trapstreet", "agent", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "tokencost>=0.1.26",
    "gitpython>=3.1",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
]

[project.urls]
Homepage = "https://trapstreet.run"
Repository = "https://github.com/trapstreet/trap"
Issues = "https://github.com/trapstreet/trap/issues"

[project.scripts]
tp = "trap.cli:app"

[tool.hatch.version]
source = "vcs"

# Version comes from git tags shaped like `vX.Y.Z`. Options are forwarded
# to setuptools_scm; `fallback_version` keeps untagged builds working.
[tool.hatch.version.raw-options]
tag_regex = "^v(?P<version>.+)$"
git_describe_command = "git describe --dirty --tags --long --match v*"
fallback_version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/trap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trap"]

[tool.hatch.build.targets.sdist]
include = ["src/trap", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.uv.workspace]
exclude = ["examples/*"]

[tool.pyright]
# Type-check the package; tests intentionally feed pydantic models loose input
# (scalars/dicts its validators coerce), which strict typing would flag.
include = ["src"]

[tool.ruff]
line-length = 110
target-version = "py313"
extend-exclude = ["src/trap/_version.py"]  # generated by hatch-vcs

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/trap/_version.py" = ["RUF022"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["trap"]
branch = true
omit = ["src/trap/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
